# asmLearning

./: arithmOper.asm  sysmacro.inc
asm/: README  arithmOper.asm  asmmake.sh  decstar.asm  first.asm  n1.asm  npnm.asm  symdec19.asm  sysmacro.inc
cat/: CMakeLists.txt  README.md
cat/conan/: settings.yml
cat/src/: main.cpp
cutobject/: CMakeLists.txt  README.md  conanfile.txt  cutobject.drawio
cutobject/data/: triangle.txt
cutobject/src/: camera.cpp  camera.h  grafs.cpp  load_data.cpp  load_data.h  main.cpp  model.cpp  model.h  static_data.cpp  static_data.h  view.cpp  view.h
opengl/: CMakeLists.txt  conanfile.txt
opengl/src/: main.cpp
voxel/: CMakeLists.txt  README.md  conanfile.txt
voxel/src/: main.cpp
voxel/src/window/: Events.cpp  Events.h  Window.cpp  Window.h
voxel/tests/: cut_object_tests.cpp
